--- a/src/app/mi-diagrama/mi-diagrama.component.html
+++ b/src/app/mi-diagrama/mi-diagrama.component.html
@@ -9,6 +9,6 @@
 <!-- tree served area to add its logic inside the div   -->
 
 <div class="container bg">
-    <img src="../../assets/images/Tree - Active Users.png" class="m-2" alt="">
+    <img src="../../assets/images/Tree - Active Users.png" height="500" width="500" class="m-2" alt="">
 
 </div>
