--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
         <div class="input-group m-4">
             <button class=" searchbox input-group-text" type="button"> <i class="bi bi-search"></i>
             </button>
-            <input type="search" class="search form-control p-2 border-0 shadow" placeholder="Search">
+            <input type="search" class="search form-control p-2 border-0 shadow" placeholder="Search" id="globalsearch">
         </div>
     </form>
     </div>
