--- a/src/app/agrigar-hijos/agrigar-hijos.component.html
+++ b/src/app/agrigar-hijos/agrigar-hijos.component.html
@@ -2,12 +2,12 @@
     <h2>Agregar Hijos</h2>
 </div>
 
-<div class="main p-3 container-fluid">
-    <div class="top20 p-3">
+<div class="main p-3 container-fluid" [ngClass]="{'darkmain': darkMode}">
+    <div class="top20 p-3" [ngClass]="{'darktop20': darkMode}">
         <div class="d-flex">
             <div class="d-flex align-items-baseline">
                 <label for="metamanager" class="form-label">Metamanager </label>
-                <select id="metamanager" class="form-select bg-form-input width mx-2">
+                <select id="metamanager" class="form-select bg-form-input width mx-2" [ngClass]="{'dark-mode': darkMode}">
                     <option></option>
                     <option>Andrea Yamilet Rangel Quiroz</option>
                     <option>Andrea Yamilet Rangel Quiroz</option>
@@ -19,15 +19,15 @@
                 <form class="d-flex">
                     <div class="input-group shadow">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select bg-white">
+                        <select class="form-select" [ngClass]="{'dark-mode': darkMode}" name="agrigarcal1">
                             <option>1/22/24</option>
                             <option>1/23/24</option>
                             <option>1/24/24</option>
                         </select>
                     </div>
                     <div class="input-group shadow">
-                        <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select bg-white">
+                        <span class="input-group-text text-bg-light" ><i class="bi bi-calendar-minus"></i></span>
+                        <select class="form-select" [ngClass]="{'dark-mode': darkMode}" name="agrigarcal2">
                             <option>1/22/24</option>
                             <option>1/23/24</option>
                             <option>1/24/24</option>
@@ -46,7 +46,7 @@ angular material sorting is installed and ready to use -->
 
         <div class=" d-flex justify-content-center">
             <table class="table table-striped my-3">
-                <tr style="background-color: #FDFDFD;">
+                <tr class="progreso" [ngClass]="{'darkprogreso': darkMode}">
                     <th>Fecha Entreviste <i class="bi bi-arrow-down-up"></i></th>
                     <th>Tipo Empleado <i class="bi bi-arrow-down-up"></i></th>
                     <th>Nombre <i class="bi bi-arrow-down-up"></i></th>
@@ -86,8 +86,8 @@ angular material sorting is installed and ready to use -->
             <button class="chartnav prev" type="button">
                 &#60;&#60; Previous</button>
             <div>
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#">&#60;&#60;</a></li>
+                <ul class="pagination" >
+                    <li class="page-item"><a class="page-link"  href="#">&#60;&#60;</a></li>
                     <li class="page-item"><a class="page-link" href="#">&#60;</a></li>
                     <li class="page-item"><a class="page-link" style="color: black;" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">></a></li>
