--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class=" d-flex justify-content-between p-3">
 
   <!-- left data  -->
-  <div class=" d-flex align-items-center col-6 me-4 ms-0">
+  <div class=" d-flex align-items-center col-6 me-4 ms-0" [ngClass]="{'dark-mode': darkMode}">
 
     <div class=" pe-2 ">
       <h5 class="text-center fw-bold mb-2">Communidad</h5>
@@ -44,8 +44,8 @@
     <!-- theme toggle  -->
     <div class="app-navbar-item me-3">
       <label class="switch">
-        <input type="checkbox" (click)="toggleDarkMode()">
-        <span class="theme slider round"></span>
+        <input type="checkbox" (click)="toggleDarkMode()" id="modetoggle" >
+        <span class="theme slider round" [ngClass]="{'darktheme': darkMode}"></span>
       </label>
     </div>
 
@@ -53,7 +53,7 @@
     <div class="dropdown">
       <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#checklist"
         data-bs-auto-close="outside">
-        <img src="../../assets/images/icons/Vector (4).png" height="19" width="19" />
+        <i class="bi bi-list-check check" [ngClass]="{'darkbi': darkMode}"></i>
       </button>
       <!-- checklist menu   -->
       <div class="dropdown-menu p-0" id="checklist">
@@ -268,7 +268,7 @@
     <div class="dropdown">
       <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#calendar"
         data-bs-auto-close="outside">
-        <img src="../../assets/images/icons/calender.png" height="18" width="18" />
+        <i class="bi bi-calendar4 fs-5" [ngClass]="{'darkbi': darkMode}"></i>
       </button>
       <div class="dropdown-menu p-0" id="calendar">
         <!-- blue header  -->
@@ -291,7 +291,7 @@
     <div class="dropdown">
       <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#whatsapp"
         data-bs-auto-close="outside">
-        <img src="../../assets/images/icons/whatsapp.png" height="20" width="20" />
+        <i class="bi bi-whatsapp fs-5" [ngClass]="{'darkbi': darkMode}"></i>
       </button>
     </div>
 
@@ -299,7 +299,7 @@
     <div class="dropdown">
       <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#chat"
         data-bs-auto-close="outside">
-        <img src="../../assets/images/icons/chat.png" height="18" width="18" />
+        <i class="bi bi-chat-left-text fs-5" [ngClass]="{'darkbi': darkMode}"></i>
       </button>
       <div class="dropdown-menu p-0" id="chat">
         <div style="background-color: #33b5ff;" class="d-flex justify-content-between align-items-center p-2">
@@ -373,7 +373,7 @@
     <div class="dropdown">
       <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#notification"
         data-bs-auto-close="outside">
-        <i class="bi bi-bell-fill fs-5"></i>
+        <i class="bi bi-bell-fill fs-5" [ngClass]="{'darkbi': darkMode}"></i>
         <span class="rounded-circle px-1 up bg-danger badge">3</span>
       </button>
       <div class="dropdown-menu p-0" id="notification">
@@ -459,12 +459,12 @@
     <div class="dropdown">
       <button type="button" class="but dropdown-toggle d-flex align-items-center pe-2 text-light-emphasis"
         data-bs-toggle="dropdown">
-        <div class="d-flex align-items-end position-relative">
-          <img class="rounded-circle me-2" width="35" height="35" src="../../assets/images/avatar/Ellipse 1.png" alt="">
+        <div class="d-flex align-items-end position-relative bg-transparent" [ngClass]="{'dark-mode': darkMode}">
+          <img class="rounded-circle me-2" width="40" height="40" src="../../assets/images/avatar/Ellipse 1.png" alt="">
           <span class="notification-dot down" style="background-color: #66FD75;"></span>
         </div>
         Andrea
-        <a href="#"><i class="bi bi-chevron-down fs-5 text-black mx-2"></i></a>
+        <a href="#"><i class="bi bi-chevron-down fs-5 mx-2" [ngClass]="{'darkbi': darkMode}"></i></a>
       </button>
       <div class="dropdown-menu">
         Login form
