--- a/src/app/mi-comunidad/mi-comunidad.component.css
+++ b/src/app/mi-comunidad/mi-comunidad.component.css
@@ -18,7 +18,12 @@ table {
     box-shadow: 0px 0px 5px #DDD;
     border-bottom: 1px solid #ddd;
     border-radius: 10px;
+    background-color: transparent;
 }
+td div, td img {
+    background-color: transparent;
+}
+
 th,
 td {
     padding: 7px;
