--- a/src/app/mis-paginas/mis-paginas.component.css
+++ b/src/app/mis-paginas/mis-paginas.component.css
@@ -2,10 +2,18 @@
     color: #404F53;
 }
 
+.darknav-link {
+    color: white;
+}
+
 .nav-link.active {
     background-color: transparent;
     border-bottom: 2px solid #38B4FB;
     color: #404F53;
+}
+
+.darknav-link.active {
+    color: white;
 }
 
 .searchbutton {
@@ -21,12 +29,13 @@
   background-color: #F5F8FA;
 }
 
-.name {
-    background-color: #CFEBFF;
-}
 
 .data {
     background-color: #E8F4FD;
+}
+
+.darkdata {
+    background-color: rgba(255,255,255,0.2);
 }
 
 .accbutton {
@@ -72,7 +81,6 @@
 
 
 .filtertab {
-    background-color: #F3FBFF;
     box-shadow: 0px 2px 2px #B1C9D6;
 }
 
@@ -84,7 +92,6 @@ table {
 
 
 th {
-    background-color: #F8FCFF;
     text-wrap: nowrap;
 }
 
@@ -97,5 +104,14 @@ td {
 }
 
 tr:nth-child(odd) {
-    background-color: #fafafa;
+    background-color: rgba(248,252,255,0.2);
 }
+
+a {
+color: black;
+}
+
+.darka {
+    color: white;
+}
+
